Add Demo photos

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     </h4>
                     <ul class="head_info">
                         <li class="OU_Name">Server Name 02</li>
-                        <li class="Group_Name TextLeft">Lorem ipsum dolor sit amet, consectetur.</li>
+                        <li class="Group_Name">Lorem ipsum dolor sit amet, consectetur.</li>
                         <li class="Server_Qty">2</li>
                         <li class="Status">
                             <div class="SwitchBtn">
@@ -263,7 +263,7 @@
                     </h4>
                     <ul class="head_info">
                         <li class="OU_Name">Server Name 03</li>
-                        <li class="Group_Name TextLeft">Lorem ipsum dolor.</li>
+                        <li class="Group_Name">Lorem ipsum dolor.</li>
                         <li class="Server_Qty">2</li>
                         <li class="Status">
                             <div class="SwitchBtn">
